Adding  use-case-view as pig picture. update the view sketch of a risk